fix overflow

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
     padding-right: 10px;
   }
   .paragraph {
-    font-size: 0.91rem;
+    font-size: 0.9109rem;
     margin: 19px 0 21px 0;
   }
   .button {
